# inline_newtype

./: Cargo.toml  LICENSE  README.md  lib.rs
src/: lib.rs
