[package]
description = "A rust newtype macro inspired by kotlin's inline class."
homepage = "https://github.com/falan/inline_newtype"
repository = "https://github.com/falan/inline_newtype"
name = "inline_newtype"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
